--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^5.0.0
   firebase_auth: ^1.4.1
   cloud_firestore: ^2.2.2
   pedantic_mono: ^1.12.1
+  path_provider: ^2.0.2
+  shared_preferences: ^2.0.6
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
