--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   intl: ^0.17.0
   cached_network_image: ^3.0.0
   async: ^2.6.1
+  google_sign_in: ^5.0.4
+  font_awesome_flutter: ^9.1.0
+  fluttertoast: ^8.0.7
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
   flutter_test:
