--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,7 +69,7 @@ android {
         prod {
             dimension "default"
             applicationId "com.doryan.freshwatch"
-            resValue "string", "app_name", "FreshWatch"
+            resValue "string", "app_name", "YasaiQuery"
         }
     }
 
